--- a/public/themes/minimal.css
+++ b/public/themes/minimal.css
@@ -329,6 +329,9 @@ body {
   background: transparent;
   border: none;
   box-shadow: none;
+  max-width: 100%;
+  max-height: 500px;
+  object-fit: contain;
 }
 
 .reveal section img.plain {
